--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  riverpod: ^2.6.1
+  dio: ^5.7.0
+  hive_flutter: ^1.1.0
+  flutter_easyloading: ^3.0.5
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
