--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_easyloading: ^3.0.5
   pretty_dio_logger: ^1.4.0
+  firebase_messaging: ^15.2.0
+  firebase_core: ^3.10.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
